--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,9 @@
 ---
 - name: Add apt-key for last mongodb repository 
   apt_key: keyserver=keyserver.ubuntu.com id=7F0CEB10
-# apt_key: url=http://docs.mongodb.org/10gen-gpg-key.asc state=present
 
 - name: Add repository for last mongodb package
-  apt_repository: repo='deb http://repo.mongodb.org/apt/ubuntu trusty/mongodb-org/3.0 multiverse' state=present update_cache=yes
+  apt_repository: repo='deb http://repo.mongodb.org/apt/ubuntu {{ansible_distribution_release}}/mongodb-org/3.0 multiverse' state=present update_cache=yes
 
 - name: install mongodb and other dependencies
   apt: name={{ item }} state=installed
