Add Some info in readme and default var file

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,17 @@
+#  MONGO PORT TO LISTEN
 mongodb_port: 27017
+# MONGO BIND IP, let this to localhost if you want some privacy
 mongodb_bind_ip: 127.0.0.1
 
+# System user where backup of the mongo dbs will be stored every day
 mongodb_backup_user: "mongo-admin"
+# Max number of backup to store on file system
 mongodb_backup_max_days: 30
 
 
+# What version do you want to install
 mongodb_org_version : "3.0.5" 
+# By default every other package are on the same version
 mongodb_org_server_version : "{{ mongodb_org_version}}"
 mongodb_org_shell_version  : "{{ mongodb_org_version}}"
 mongodb_org_mongos_version  : "{{ mongodb_org_version}}"
